--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -61,6 +61,10 @@ button {
   user-select: none;
   touch-action: none;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   &:hover {
     cursor: pointer;
 
@@ -69,18 +73,28 @@ button {
   }
 }
 
-
 .text-center {
   text-align: center;
 }
 
-.center-flex-col {
+.center-flex {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: $base-margin;
+  &-col {
+    flex-direction: column;
+  }
 }
 
 .block {
   display: block;
+}
+
+.bold {
+  font-weight: 600;
+}
+
+.text-md {
+  font-size: 1.2em;
 }
