home page employee & stars

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -2,3 +2,5 @@
 @import './user-item.scss';
 @import './menu.scss';
 @import './layout-buttons.scss';
+@import './circle-user.scss';
+@import './stars.scss';
