--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -2,3 +2,10 @@
   display: flex;
   gap: $base-margin;
 }
+
+.home-heading {
+  font-size: 4em;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  text-align: center;
+}
