--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -103,3 +103,16 @@ button {
 .text-md {
   font-size: 1.2em;
 }
+
+.image-outline {
+  padding: 4px;
+  border: 4px solid #4287f5;
+  display: inline-flex;
+  box-sizing: border-box;
+  width: min-content;
+  height: min-content;
+}
+
+.pointer {
+  cursor: pointer;
+}
