--- a/src/styles/pages/events.scss
+++ b/src/styles/pages/events.scss
@@ -4,3 +4,32 @@
   padding-bottom: 36px;
   text-align: center;
 }
+
+.event-item {
+  display: flex;
+  align-items: center;
+  gap: $base-margin;
+
+  & > span {
+    font-size: 1.2em;
+  }
+}
+
+table.spacing {
+  td {
+    padding-right: 8px;
+    padding-left: 8px;
+    &:first-child {
+      padding-left: unset;
+    }
+    &:last-child {
+      padding-right: unset;
+    }
+  }
+}
+
+.events-list {
+  & .vote-text {
+    font-size: 1.5em;
+  }
+}
