--- a/styles/pages/events.scss
+++ b/styles/pages/events.scss
@@ -32,6 +32,7 @@ table.spacing {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  gap: $base-margin;
 
   & .vote-text {
     font-size: 1.5em;
